Fix: corrected spelling in double beds section

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         </tr>
                         <tr>
                           <td class="pe-2"><strong>Bed:</strong></td>
-                          <td>Doubl King Size Beds</td>
+                          <td>Double King Size Beds</td>
                         </tr>
                         <tr>
                           <td class="pe-2"><strong>Services:</strong></td>
